<resources xmlns:tools="http://schemas.android.com/tools">
        <string name="nav_header_desc">Navigation header</string>
        <string name="walk_1">Bienvenue</string>
        <string name="walk_2">Calendrier</string>
        <string name="fb_login_protocol_scheme">fb1287129168452833</string>
        <string name="walk_3">Chauffeurs</string>
        <string name="walk_1_description">Des services pour vous transporter là où vous devez aller. Beaucoup de choses peuvent arriver, sur notre trajet.</string>
        <string name="walk_2_description">Faites un tour quand et où vous voulez. Planifiez et programmez pour que nous venions vous chercher.</string>
        <string name="walk_3_description">Nous avons les chauffeurs les plus sympathiques qui feront un effort supplémentaire pour vous.</string>
        <string name="sign_in">Connexion</string>
        <string name="sign_up">"S'inscrire"</string>
        <string name="or_connect_with_social">Ou connectez-vous avec les réseaux sociaux</string>
        <string name="enter_the_details_you_used_to_register">Entrez les détails que vous avez utilisés pour vous inscrire</string>
        <string name="email">Email</string>
        <string name="name">Nom</string>
        <string name="first_name">Nom de famille</string>
        <string name="last_name">Prénoms</string>
        <string name="phone_number">Telephone</string>
        <string name="mobile_number" tools:ignore="MissingTranslation">Numéro de portable</string>
        <string name="password">Mot de passe</string>
        <string name="confirm_password">Confirmez le mot de passe</string>
        <string name="register">"S'inscrire"</string>
        <string name="welcome_back_sign_in_to_continue">Bienvenue à nouveau, connectez-vous pour continuer</string>
        <string name="validmobile" tools:ignore="MissingTranslation">Veuillez entrer un numéro de portable valide</string>
        <string name="what_your_email_address">Quelle est votre adresse e-mail?</string>
        <string name="what_your_phonenumber" tools:ignore="MissingTranslation">Quel est votre numéro de portable?</string>
        <string name="enter_your_password">Tapez votre mot de passe</string>
        <string name="i_forgot_my_password">mot de passe oublié </string>
        <string name="i_need_to_create_an_account">créer un compte</string>
        <string name="invalid_email">"Veuillez saisir l'adresse e-mail"</string>
        <string name="invalid_password">Veuillez entrer le mot de passe</string>
        <string name="invoice">"Facture d'achat"</string>
        <string name="pay_now">Payez maintenant</string>
        <string name="time_taken">Temps pris</string>
        <string name="distance_travelled">Distance parcourue</string>
        <string name="base_fare">Tarif de base</string>
        <string name="tax">Taxe sur la TPS</string>
        <string name="total">Total</string>
        <string name="cash">Cash</string>
        <string name="payment">Paiement</string>
        <string name="your_trips">Mes voyages</string>
        <string name="coupon">Coupon</string>
        <string name="wallet">Portefeuille</string>
        <string name="passbook">Livret</string>
        <string name="help">Aide</string>
        <string name="share">Partager</string>
        <string name="invite_referral">Inviter un parrainage</string>
        <string name="faq_support">FAQ Assistance</string>
        <string name="terms_and_conditions">Termes et conditions</string>
        <string name="privacy_policy">Politique de confidentialité</string>
        <string name="logout">Se déconnecter</string>
        <string name="save">Enregistrer</string>
        <string name="looking_to_change_password">Je cherche à changer de mot de passe</string>
        <string name="profile">Profil</string>
        <string name="current_password">Mot de passe actuel</string>
        <string name="new_password">Nouveau mot de passe</string>
        <string name="change_password">Changer le mot de passe</string>
        <string name="support">Support</string>
        <string name="our_team_persons_will_contact_you_soon">Les personnes de notre équipe vous contacteront bientôt!</string>
        <string name="past">Passé</string>
        <string name="upcoming">Prochain</string>
        <string name="wallet_history">Historique du portefeuille</string>
        <string name="coupon_history">Historique des coupons</string>
        <string name="yes">Oui</string>
        <string name="no">Non</string>
        <string name="use_wallet_amount">Utiliser le montant du portefeuille</string>
        <string name="rent_booking">Location/Reservation</string>
        <string name="outstation_booking">Réservation de location</string>
        <string name="past_trip_details">Détails du voyage passé</string>
        <string name="payment_method">Mode de paiement</string>
        <string name="cancel_ride">Annuler le trajet</string>
        <string name="call">Appeler</string>
        <string name="pay_via">Payez via</string>
        <string name="comments">Commentaires</string>
        <string name="dispute">Dispute</string>
        <string name="view_receipt">Afficher le reçu</string>
        <string name="upcoming_trip_details">Détails du voyage à venir</string>
        <string name="no_data_found">Aucune donnée trouvée</string>
        <string name="booking_id">ID de réservation</string>
        <string name="settings">Paramètres</string>
        <string name="favorites">Favoris</string>
        <string name="choose_language">Choisir la langue</string>
        <string name="lost_my_item">J’ai perdu mon objet</string>
        <string name="incorrect_charge_dispute">Litige de charge incorrect</string>
        <string name="i_would_like_to_refund">Je souhaite rembourser</string>
        <string name="submit">Envoyer</string>
        <string name="close">Fermer</string>
        <string name="write_your_comment">Écrivez votre commentaire</string>
        <string name="reason_for_canceling">Raison de l’annulation</string>
        <string name="ratings">Audimat</string>
        <string name="get_pricing">Commander</string>
        <string name="please_click_back_again_to_exit">Veuillez cliquer à nouveau pour quitter</string>
        <string name="choose_a_date">Choisissez une date</string>
        <string name="choose_a_time">Choisissez une heure</string>
        <string name="schedule_a_ride">Commander</string>
        <string name="schedule_request">Demande de calendrier</string>
        <string name="fare_km">Tarif / km</string>
        <string name="fare_type">Type de tarif</string>
        <string name="capacity">Capacité</string>
        <string name="done">Valider</string>
        <string name="rate_card">Carte de taux</string>
        <string name="where_to">Où ça?</string>
        <string name="pickup_location">Ma position?</string>
        <string name="home">Domicile</string>
        <string name="work">Travail</string>
        <string name="driver_has_arrived_your_location">Le chauffeur est arrivé à votre emplacement</string>
        <string name="due_to_peek_hours">Votre facture finale sera basée sur votre km réel et le temps pris.</string>
        <string name="cancel">Annuler</string>
        <string name="add_amount">Ajouter un montant</string>
        <string name="add_money">Ajouter de l’argent</string>
        <string name="add_coupon_code">Ajouter un code promo</string>
        <string name="no_coupon_added">Aucun coupon ajouté</string>
        <string name="add_coupon">Ajouter un coupon</string>
        <string name="estimated_fare">Tarif estimé</string>
        <string name="eta">ÊTA</string>
        <string name="model">Modèle</string>
        <string name="schedule_ride">Programmer</string>
        <string name="ride_now">Commander</string>
        <string name="due_to_high_demand_price_may_vary">En raison de la forte demande, le prix peut varier</string>
        <string name="choose_an_account">Choisir un compte</string>
        <string name="facebook">Facebook</string>
        <string name="google">Google</string>
        <string name="white_space"> </string>
        <string name="amount">Quantité</string>
        <string name="credited_by">Crédité par</string>
        <string name="card">Carte</string>
        <string name="offer">Offrir</string>
        <string name="coupon_code">Coupon Code</string>
        <string name="refer_your_friends_to_drive">Référez vos amis à conduire!</string>
        <string name="give_the_free_ride_by_reffering_the_invite_code_worth_">"Offrez un tour gratuit en parrainant le code d'invitation d'une valeur de %s"</string>
        <string name="share_your_invite_code">"Partagez votre code d'invitation"</string>
        <string name="refferal_earning">Revenus de parrainage</string>
        <string name="total_members">Nombre total de membres</string>
        <string name="invite_friends">Inviter des amis</string>
        <string name="card_payment">Paiement par cartet</string>
        <string name="add_card_for_payments">Ajouter une carte pour les paiements</string>
        <string name="other_payment">Autres paiements</string>
        <string name="by_cash">En espèces</string>
        <string name="paypal">Paypal</string>
        <string name="sos">SOS</string>
        <string name="sos_alert">Alerte SOS</string>
        <string name="are_sure_you_want_to_emergency_alert">"Êtes-vous sûr de vouloir procéder à l'alerte d'urgence?"</string>
        <string name="finding_driver">Recherche de chauffeur…</string>
        <string name="cancel_request">"Demande d'annulation"</string>
        <string name="are_sure_you_want_to_cancel_the_request">Êtes-vous sûr de vouloir annuler la demande?</string>
        <string name="invalid_first_name">Veuillez saisir le prénom</string>
        <string name="invalid_last_name">Veuillez saisir le nom de famille</string>
        <string name="invalid_mobile">Veuillez entrer le numéro de téléphone</string>
        <string name="invalid_confirm_password">Veuillez saisir le mot de passe de confirmation</string>
        <string name="password_should_be_same">Le mot de passe doit être le même</string>
        <string name="invalid_password_length">La longueur du mot de passe doit être comprise entre 6 et 15 caractères.</string>
        <string name="invalid_device_token">"Jeton d'appareil non valide"</string>
        <string name="invalid_device_id">"Identifiant d'appareil non valide"</string>
        <string name="you_have_been_successfully_registered">Vous avez bien été enregistré.</string>
        <string name="confirm_new_password">Confirmer le nouveau mot de passe</string>
        <string name="please_give_permissions">"S'il vous plaît donner des autorisations"</string>
        <string name="add_card_details">Ajouter les détails de la carte</string>
        <string name="please_enter_card_number">Veuillez saisir le numéro de carte</string>
        <string name="please_enter_card_cvv">Veuillez saisir le CVV de la carte</string>
        <string name="please_enter_card_expiration_details">"Veuillez saisir les détails d'expiration de la carte"</string>
        <string name="reset_password">réinitialiser le mot de passe</string>
        <string name="otp">OTP</string>
        <string name="otp_">OTP: %s</string>
        <string name="internal_server_error">Internal server error :(</string>
        <string name="dismiss">Rejeter</string>
        <string name="logout_successfully">Déconnexion réussie</string>
        <string name="are_sure_you_want_to_logout">Voulez-vous vraiment vous déconnecter?</string>
        <string name="driver_accepted_your_request">Le chauffeur a accepté votre demande</string>
        <string name="you_are_on_ride">Vous avez une cource</string>
        <string name="please_enter_cancel_reason">"Veuillez saisir le motif de l'annulation"</string>
        <string name="by_ccavenue">Par CCAVenue</string>
</resources>